--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
     <head>
         <meta charset="utf-8" />
         <title>Weather API</title>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="weatherAPI.js"></script>
     </head>
     <body>
+        <p id="data"></p>
+
+        <ul>
+            <li id="city"></li>
+            <li id="weatherType"></li>
+            <li id="fTemp"></li>
+            <li id="windSpeed"></li>
+        </ul>
     </body>
 </html>
